# fetch-impersonate

./: .gitignore  .oxfmtrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  native-targets.json  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
.github/workflows/: build-native.yml  ci.yml  fingerprint.yml  release.yml
crates/native/: Cargo.toml  build.rs
crates/native/c/: shim.c  shim.h
crates/native/src/: body.rs  command.rs  engine.rs  error.rs  fingerprint.rs  lib.rs  reactor.rs  transfer.rs
crates/native/src/ffi/: bindings.rs  mod.rs
npm/native-android-arm64/: README.md  package.json
npm/native-darwin-arm64/: package.json
npm/native-darwin-x64/: package.json
npm/native-linux-arm-gnueabihf/: README.md  package.json
npm/native-linux-arm64-gnu/: package.json
npm/native-linux-arm64-musl/: package.json
npm/native-linux-ia32-gnu/: README.md  package.json
npm/native-linux-riscv64-gnu/: README.md  package.json
npm/native-linux-x64-gnu/: README.md  package.json
npm/native-linux-x64-musl/: README.md  package.json
schemas/: native-targets.schema.json
scripts/: android-emulator-smoke.ts  build-native-target.ts  check-bindings.ts  check-fingerprint.ts  check-package-metadata.ts  check-target-parity.ts  generate-bindings.ts  native-smoke.cjs  pack-native.ts  package-native.ts  prepare-native.ts  smoke-install.ts  verify-linkage.ts
src/: create-fetch.ts  fetch.ts  index.ts  native-loader.ts  options.ts
tests/: native-integration.test.ts  public-api.test.ts
(+9 files in other folders)
