[package]
name = "fetch-impersonate-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = ["native-curl"]
native-curl = []
native-stub = []

[dependencies]
napi = { version = "3.10.5", features = ["napi8"] }
napi-derive = "3.5.10"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.19"

[build-dependencies]
cc = "1.3.0"
napi-build = "2.3.2"
serde_json = "1.0.150"

